<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="value"
            type="String" />


    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/admin_reported_recipe_item_layout"
        android:padding="10dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@mipmap/ic_launcher"
            android:padding="5dp"
            android:id="@+id/imageView_admin_recipe_item"/>


        <TextView
            android:id="@+id/textView_admin_recipeTitel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@{value}"/>


        <ImageButton
            android:id="@+id/button_admin_remove_recipe"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_delete_forever_black_24dp" />

        <ImageButton
            android:id="@+id/button_admin_spare"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_check_black_24dp" />

    </LinearLayout>
</layout>