...
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_admin_recipes"
            android:layout_width="match_parent"
            android:layout_height="268dp">

        </androidx.recyclerview.widget.RecyclerView>

        <View
...
